# dts-developer-challenge

./: .codespellrc  .gitignore  Cargo.toml  Justfile  README.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  rust-toolchain.toml
backend/.sqlx/: query-e70e4b5cf28077cb1df939cbee6c2eaa411d8c5a9d9ab4975fdb1b556a7d8ff6.json
backend/migrations/: 20250416190316_setup.sql  20250417144902_timezone.sql
backend/src/: cli.rs  lib.rs  main.rs  tasks.rs
