[package]
name = "dts_developer_challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3" }
chrono = { version = "0.4.40", default-features = false, features = [
  "std",
  "clock",
  "serde",
] }
clap = { version = "4.5.36", features = ["derive", "color"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", default-features = false, features = [
  "derive",
  "macros",
  "migrate",
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
tokio = { version = "1.44.2", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "tracing",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[dev-dependencies]
rstest = "0.25.0"
